--- a/JSTopTabBar/JSTTBNormalViewController.xib
+++ b/JSTopTabBar/JSTTBNormalViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController1">
@@ -16,13 +16,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a normal UIViewController" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ye-hC-cdE">
-                    <rect key="frame" x="173" y="100" width="254" height="21"/>
+                    <rect key="frame" x="173.5" y="100" width="253" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="df3-pg-NYu">
-                    <rect key="frame" x="20" y="171" width="560" height="30"/>
+                    <rect key="frame" x="20" y="170" width="560" height="30"/>
                     <state key="normal" title="Toggle JSTTBC">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -31,7 +31,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="by9-md-Gjx">
-                    <rect key="frame" x="20" y="209" width="560" height="30"/>
+                    <rect key="frame" x="20" y="208" width="560" height="30"/>
                     <state key="normal" title="Toggle JSTTBC button borders">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -40,21 +40,12 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOk-d3-PV5">
-                    <rect key="frame" x="20" y="247" width="560" height="30"/>
+                    <rect key="frame" x="20" y="246" width="560" height="30"/>
                     <state key="normal" title="Toggle JSTTBC arrow button shadow">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="didTapToggleShadow:" destination="-1" eventType="touchUpInside" id="vSr-1I-IFV"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHF-FG-XXN">
-                    <rect key="frame" x="20" y="285" width="560" height="30"/>
-                    <state key="normal" title="Toggle JSTTBC arrow button panning">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="didTapTogglePanning:" destination="-1" eventType="touchUpInside" id="Lgm-KY-5iR"/>
                     </connections>
                 </button>
             </subviews>
@@ -64,11 +55,8 @@
                 <constraint firstItem="by9-md-Gjx" firstAttribute="top" secondItem="df3-pg-NYu" secondAttribute="bottom" constant="8" symbolic="YES" id="47x-Bt-vFL"/>
                 <constraint firstItem="df3-pg-NYu" firstAttribute="top" secondItem="5Ye-hC-cdE" secondAttribute="bottom" constant="50" id="FEZ-E1-q1S"/>
                 <constraint firstItem="QOk-d3-PV5" firstAttribute="top" secondItem="by9-md-Gjx" secondAttribute="bottom" constant="8" symbolic="YES" id="Fr5-sj-ZOR"/>
-                <constraint firstAttribute="trailing" secondItem="gHF-FG-XXN" secondAttribute="trailing" constant="20" symbolic="YES" id="IwK-cu-sJx"/>
-                <constraint firstItem="gHF-FG-XXN" firstAttribute="top" secondItem="QOk-d3-PV5" secondAttribute="bottom" constant="8" symbolic="YES" id="OJX-Zm-9Y7"/>
                 <constraint firstItem="5Ye-hC-cdE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="XoN-KG-te5"/>
                 <constraint firstAttribute="trailing" secondItem="df3-pg-NYu" secondAttribute="trailing" constant="20" symbolic="YES" id="eaV-Gs-kH7"/>
-                <constraint firstItem="gHF-FG-XXN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" symbolic="YES" id="fG4-Fu-FpD"/>
                 <constraint firstAttribute="trailing" secondItem="QOk-d3-PV5" secondAttribute="trailing" constant="20" symbolic="YES" id="lBp-EV-Q03"/>
                 <constraint firstAttribute="centerX" secondItem="5Ye-hC-cdE" secondAttribute="centerX" id="n22-JG-Pld"/>
                 <constraint firstAttribute="trailing" secondItem="by9-md-Gjx" secondAttribute="trailing" constant="20" symbolic="YES" id="nbM-sZ-eba"/>
